# openqoe-dev

./: .coderabbit.yaml  .gitignore  LICENSE  README.md  compose.yaml  compose.yml  contributing.md  openqoe-dev.code-workspace  sonar-project.properties  test_event.json
.github/workflows/: main.yml  release.yml  sdk-publish.yml
docs/: api-reference.md  architecture.md  contributing.md  data-model.md  deployment-checklist.md  deployment-guide.md  production-ready.md  sdk-integration.md  technical-spec.md
docs/observability/: README.md
examples/: DEMO_TEMPLATE.md  README.md
examples/dashjs-demo/: index.html
examples/hlsjs-demo/: index.html
examples/html5-demo/: index.html
examples/shaka-demo/: index.html
examples/videojs-demo/: index.html
observability/: GRAFANA_DASHBOARDS.md  README.md
observability/alloy/: config.alloy
observability/dashboards/: impact-explorer.json  live-streaming.json  quality-delivery.json  vod-monitoring.json
observability/loki/: loki-config.yml
observability/mimir/: mimir-config.yml  runtime.yml
sdk/: README.md  jest.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.json
worker/: .dev.vars.grafanacloud.example  .env.example  .gitignore  README.md  go.mod  main.go  package-lock.json  package.json  tsconfig.json  validate.sh  wrangler.toml
worker_v2/: .dev.vars.selfhosted.example  Dockerfile  README.md  main.go  tsconfig.json
worker_v2_impl_cpp/: CMakeLists.txt
worker_v2_impl_cpp/src/: item_handler.cpp  item_handler.hpp  main_server.cpp
worker_v2_impl_go/: go.mod  go.sum  main.go
(+133 files in other folders)
